--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         release {
             storeFile file("my-release-key.jks")
             storePassword "123321"
-            keyAlias "my-release-alias"
+            keyAlias "my-key-alias"
             keyPassword "123321"
         }
     }
